<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity"
    android:background="#ffffff">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200"
        android:minHeight="?actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/ToolBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/llcontent"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgBookImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="centerCrop"
                    android:padding="5dp"/>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/BookName"
                        android:padding="8dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        />


                    <TextView
                        android:id="@+id/txtAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/AuthorName"
                        android:padding="8dp"
                        android:layout_below="@+id/txtBookName"
                        android:textSize="12sp"
                        android:textColor="#000000"
                        />


                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtAuthor"
                        android:layout_alignParentBottom="true"
                        android:text="Rs : 299"
                        android:padding="8dp"
                        android:textSize="15sp"
                        android:textColor="#000000" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#ffc828"
                    android:text="4.5"
                    android:drawableLeft="@drawable/ic_rating"
                    android:drawablePadding="4dp"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/llcontent">

                <TextView
                    android:id="@+id/txtAboutBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="6dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/AboutBook"
                    android:layout_marginTop="15dp"
                    />

                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_below="@+id/txtAboutBook"
                    android:textSize="18sp"
                    android:text="@string/helloBlank"
                    android:textColor="#000000"
                    android:layout_margin="10dp"/>


            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:text="@string/add_to_fav"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="15sp"
        android:padding="8dp"/>


    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ProgressBar
            android:id="@+id/ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>


    </RelativeLayout>



</RelativeLayout>